# DeepDeck.Ahuyama.fw

./: Dockerfile  color-whole.sh
components/menu/: CMakeLists.txt
components/menu/src/: menu.c
components/oled/: CMakeLists.txt  oled_tasks.c
components/oled/include/: oled_tasks.h
components/rgb_led/include/: rgb_led.h
components/rgb_led/src/: rgb_led.c
components/rotary_encoder/: CMakeLists.txt
components/rotary_encoder/src/: rotary_encoder_pcnt_ec11.c
main/: CMakeLists.txt  deepdeck_tasks.c  deepdeck_tasks.h  gesture_handles.c  keyboard_config.h  keypress_handles.c  main.c  mqtt.c  mqtt.h  queue.c  queue.h  wifi_handles.c  wifi_handles.h
